# vaultspec-core

./: .dockerignore  .env.example  .geminirc.json  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pymarkdown.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cli-audit-notes.md  conftest.py  extension.toml  justfile  lychee.toml  mcp.json  pyproject.toml  release-please-config.json  requirements.txt  taplo.toml
.agent/rules/: vaultspec-documentation.builtin.md  vaultspec-skills.builtin.md  vaultspec-subagents.builtin.md  vaultspec-system.builtin.md
.agents/: GEMINI.md
.agents/rules/: vaultspec-skills.md  vaultspec-subagents.md  vaultspec-system.md
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: vaultspec-adr-researcher.md  vaultspec-code-reviewer.md  vaultspec-complex-executor.md  vaultspec-docs-curator.md  vaultspec-reference-auditor.md  vaultspec-researcher.md  vaultspec-simple-executor.md  vaultspec-standard-executor.md  vaultspec-writer.md
.claude/rules/: vaultspec-skills.builtin.md  vaultspec-subagents.builtin.md
.docs/adr/: 2026-02-08-vault-api-adr.md  2026-02-08-vault-rag-adr.md  2026-02-12-rag-embeddings-adr.md  2026-02-12-rag-mcp-api-adr.md  2026-02-12-rag-retrieval-adr.md  2026-02-12-rag-vectordb-adr.md
.docs/plan/: 2026-02-08-vault-api-plan.md  2026-02-08-vault-rag-plan.md  2026-02-12-rag-plan.md
.github/: release.yml
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  publish.yml  release-please.yml  release.yml
.rules/: AGENTS.md  FRAMEWORK.md  README.md
.rules/agents/: adr-researcher.md  code-reviewer.md  complex-executor.md  docs-curator.md  reference-auditor.md  simple-executor.md  standard-executor.md  task-writer.md
.rules/rules/: task-skills.md  task-subagents.md  test-sync-rule.md
.rules/scripts/: _paths.py  acp_dispatch.py  check_naming.py  cli.py  docs.py  mcp_dispatch.py  subagent.py  task_engine.py
.rules/skills/: fd.md  rg.md  sg.md  task-adr.md  task-curate.md  task-execute.md  task-reference.md  task-research.md  task-review.md  task-subagent.md  task-write.md
.rules/system/: base.md  gemini.md  workflow.md
.rules/templates/: ADR.md  CODE_REVIEW.md  EXEC_STEP.md  EXEC_SUMMARY.md  PLAN.md  README.md  REF_AUDIT.md  RESEARCH.md
.vault/: a2a.index.md  acp-bridge-auth.index.md  acp-claude-multimodal.index.md  acp-claude-reliability.index.md  agent-removal.index.md  audit-findings.index.md  audit-fixes.index.md  builtins-build-strategy.index.md  check-engine-perf.index.md  clci-release.index.md  cli-ambiguous-states.index.md  cli-architecture.index.md  cli-ecosystem-factoring.index.md  cli-logging.index.md  cli-output.index.md  cli-restructure.index.md  cli-target-refactor.index.md  cli-test-coverage.index.md  code-health.index.md  codebase-audit.index.md  codex-integration.index.md  concurrency.index.md  docs-curation.index.md  documentation.index.md  feature-documentation.index.md  flow-bugs.index.md  framework.index.md  gemini-agent-render.index.md  graph-hardening.index.md  health-audit.index.md  hooks-maturity.index.md  install-cmds.index.md  marketing-and-documentation.index.md  marketing-audit.index.md  mcp-cli-interface.index.md  mcp-consolidation.index.md  mcp-installation.index.md  mcp-registry.index.md  mcp-testing.index.md  module-exports.index.md  (+24 more)
.vault/.obsidian/: graph.json  workspace.json
.vault/adr/: 2026-02-08-vault-api-adr.md  2026-02-12-rag-embeddings-adr.md  2026-02-12-rag-mcp-api-adr.md  2026-02-12-rag-retrieval-adr.md  2026-02-12-rag-vectordb-adr.md  2026-02-15-a2a-adr.md  2026-02-15-a2a-implementation-plan.md  2026-02-15-cross-agent-adr.md  2026-02-15-cross-agent-bidirectional-communication.md  2026-02-15-provider-feature-parity-adr.md  2026-02-15-subagent-adr.md  2026-02-15-subagent-architecture-refactor.md  2026-02-16-environment-variable-adr.md  2026-02-16-environment-variable-standardization.md  2026-02-17-bootstrap-prompt-adr.md  2026-02-17-bootstrap-prompt-design-spec.md  2026-02-18-append-system-prompt-adr.md  2026-02-18-system-prompt-restructure-adr.md  2026-02-19-french-novel-relay-adr.md  2026-02-19-workspace-path-decoupling-adr.md  2026-02-20-a2a-team-adr.md  2026-02-20-cuda-dependencies-adr.md  2026-02-20-marketing-and-documentation-adr.md  2026-02-20-startup-fixes-adr.md  2026-02-20-team-mcp-integration-p1-adr.md  2026-02-21-acp-claude-multimodal-adr.md  2026-02-21-acp-claude-reliability-adr.md  2026-02-21-claude-a2a-overhaul-adr.md  2026-02-21-claude-acp-bidirectional-adr.md  2026-02-21-claude-provider-auth-strategy-adr.md  2026-02-21-gemini-provider-auth-strategy-adr.md  2026-02-21-module-exports-adr.md  (+48 more)
.vaultspec/: CLI.md  FRAMEWORK.md  MCP.md  README.md  providers.json
docs/: 2026-02-07-a2a-protocol-reference.md  2026-02-07-acp-protocol-reference.md  2026-02-07-frontier-landscape.md  2026-02-07-multi-agent-orchestration-survey.md  2026-02-07-protocol-architecture.md  2026-02-07-protocol-review.md  api.md  cli-reference.md  concepts.md  configuration.md  getting-started.md  search-guide.md
mock-project/: README.md
test-project/: README.md
tests/: _windows_temp_compat.py  conftest.py  constants.py  pytest.ini  smoke_check.py  smoke_test.py  test_acp_dispatch_cli.py  test_advisory_lock.py  test_automation_contracts.py  test_claude_provider_lifecycle.py  test_cli_integration.py  test_cli_sync.py  test_cli_unit.py  test_commands.py  test_config.py  test_full_cycle.py  test_gemini_mcp_integration.py  test_gemini_provider_lifecycle.py  test_integration_claude.py  test_integration_gemini.py  test_interactive.py  test_logging_config.py  test_mcp_config.py  test_mcp_dispatch.py  test_mcps.py  test_package_metadata.py  test_protocol_fileio.py  test_protocol_lifecycle.py  test_protocol_permissions.py  test_protocol_terminal.py  test_rag_api.py  test_rag_embeddings.py  test_rag_indexer.py  test_rag_integration.py  test_rag_performance.py  test_rag_quality.py  test_rag_robustness.py  test_rag_search.py  test_rag_store.py  test_resolve_includes.py  (+6 more)
(+1393 files in other folders)
