[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultspec"
version = "0.1.0"
description = "A governed development framework for AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Gergely Wootsch", email = "hello@gergely-wootsch.com"}
]
dependencies = [
    "a2a-sdk>=0.3.22",
    "agent-client-protocol>=0.8.1",
    "claude-agent-sdk>=0.1.30",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "starlette>=0.27.0",
    "sse-starlette>=1.0.0",
    "mcp>=1.20.0",
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
keywords = ["ai-agents", "governance", "spec-driven-development", "adr", "mcp", "acp", "a2a"]

[project.urls]
Homepage = "https://github.com/wgergely/vaultspec"
Repository = "https://github.com/wgergely/vaultspec"
Documentation = "https://github.com/wgergely/vaultspec/tree/main/docs"
"Bug Tracker" = "https://github.com/wgergely/vaultspec/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.1.0",
    "ty>=0.0.15",
    "prek>=0.3.2",
    "lychee>=0.0.1",
    "identify>=2.0.0",
    "nodeenv>=1.0.0",
]
rag = [
    "torch>=2.9.0",
    "sentence-transformers>=5.0.0",
    "lancedb>=0.27.0",
    "einops>=0.8.0",  # transitive dep of nomic-embed-text-v1.5 (trust_remote_code)
]
dev-rag = [
    "vaultspec[dev,rag]",
]

[tool.pytest.ini_options]
testpaths = [".vaultspec/lib/tests", ".vaultspec/lib/src"]
pythonpath = [".vaultspec/lib/src", ".vaultspec/lib/scripts", ".vaultspec/lib"]
asyncio_mode = "auto"
markers = [
    "unit: fast tests with no external dependencies",
    "api: MCP subagent and RAG API surface tests",
    "search: RAG search, filtering, and ranking tests",
    "index: embedding, indexing, and store operation tests",
    "quality: precision, recall, and full-corpus benchmark tests",
    "integration: requires CLI tools and network",
    "gemini: requires Gemini CLI installed",
    "claude: requires Claude CLI installed",
    "timeout: timeout in seconds for individual tests",
    "a2a: A2A protocol interoperability tests",
    "e2e: end-to-end tests requiring real LLM API keys",
    "benchmark: performance and throughput benchmarks (GPU required)",
    "team: multi-agent team coordination tests (TeamCoordinator)",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ARG"]
"**/test_*.py" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["orchestration", "protocol"]
known-third-party = ["acp"]

[tool.setuptools.packages.find]
where = [".vaultspec/lib/src"]

[tool.ty.environment]
python-version = "3.13"
root = [".", ".vaultspec/lib/src", ".vaultspec/lib/scripts", ".vaultspec/lib"]
