[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultspec"
version = "0.1.0"
description = "A governed development framework for AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Gergely Wootsch", email = "hello@gergely-wootsch.com" }]
keywords = [
  "a2a",
  "acp",
  "adr",
  "ai-agents",
  "governance",
  "mcp",
  "spec-driven-development"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0",
  "a2a-sdk>=0.3.22",
  "agent-client-protocol>=0.8.1",
  "claude-agent-sdk @ git+https://github.com/anthropics/claude-agent-sdk-python.git@main",
  "httpx>=0.27.0",
  "mcp>=1.20.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "sse-starlette>=1.0.0",
  "starlette>=0.27.0",
  "uvicorn>=0.23.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/wgergely/vaultspec/issues"
Documentation = "https://github.com/wgergely/vaultspec/tree/main/docs"
Homepage = "https://github.com/wgergely/vaultspec"
Repository = "https://github.com/wgergely/vaultspec"

[project.scripts]
vaultspec = "vaultspec.__main__:main"
vaultspec-mcp = "vaultspec.mcp_server.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-timeout>=2.3.0",
  "pytest-reportlog>=0.4.0",
  "pytest-durations>=1.0.0",
  "ruff>=0.1.0",
  "ty>=0.0.15",
  "prek>=0.3.2",
  "lychee>=0.0.1",
  "identify>=2.0.0",
  "nodeenv>=1.0.0",
]
dev-rag = [
  "vaultspec[dev,rag]",
]
rag = [
  "torch>=2.9.0",
  "sentence-transformers>=5.0.0",
  "lancedb>=0.27.0",
  "einops>=0.8.0",  # transitive dep of nomic-embed-text-v1.5 (trust_remote_code)
]

[dependency-groups]
dev = [
  "identify>=2.0.0",
  "lychee>=0.0.1",
  "nodeenv>=1.0.0",
  "prek>=0.3.2",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-durations>=1.0.0",
  "pytest-reportlog>=0.4.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.1.0",
  "ty>=0.0.15",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vaultspec"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
markers = [
  "unit: fast tests with no external dependencies",
  "api: MCP subagent and RAG API surface tests",
  "search: RAG search, filtering, and ranking tests",
  "index: embedding, indexing, and store operation tests",
  "quality: precision, recall, and full-corpus benchmark tests",
  "integration: requires CLI tools and network",
  "gemini: requires Gemini CLI installed",
  "claude: requires Claude CLI installed",
  "timeout: timeout in seconds for individual tests",
  "a2a: A2A protocol interoperability tests",
  "e2e: end-to-end tests requiring real LLM API keys",
  "benchmark: performance and throughput benchmarks (GPU required)",
  "team: multi-agent team coordination tests (TeamCoordinator)",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file = "test-debug.log"
log_file_level = "DEBUG"
timeout = 300
timeout_func_only = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "RUF",  # ruff-specific rules
  "N",  # pep8-naming
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ARG"]
"**/test_*.py" = ["ARG"]
# Core CLI modules use argparse/Path as runtime parameter types — no need to move to TYPE_CHECKING
"src/vaultspec/core/*.py" = ["TC003"]
"src/vaultspec/mcp_server/subagent_tools.py" = ["TC002"]
"src/vaultspec/orchestration/team_task_engine.py" = ["TC003"]
# Protocol proxy methods intentionally use **kwargs as passthrough — not unused
"src/vaultspec/protocol/acp/gemini_bridge.py" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["vaultspec"]

[tool.ty.environment]
python-version = "3.13"
root = [".", "src"]

[tool.ty.rules]
# Optional RAG/ML/logging deps not installed in base venv — suppress
unresolved-import = "ignore"
